Transferred from the Adobe Open Source Subversion Repository
Revision: 12074
Author:   gruehle@adobe.com
Date:     2009-11-21T01:02:03.186839Z

Log Message: 
-----------
Change baseColor to chromeColor.

QE notes: Tests need to be updated.
Doc notes: ASDoc has been updated. Other docs need updating.
Bugs: SDK-24298
Reviewer: Ely
Tests run: checkintests, qe cyclone
Is noteworthy for integration: Yes

Modified Paths:
--------------
112 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275108 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/TabBarExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/TabBarExample.mxml
@@ -11,12 +11,12 @@
         TabBar ToggleButton:overAndSelected,
         TabBar ToggleButton:downAndSelected,
         TabBar ToggleButton:disabledAndSelected {
-            baseColor: #9999CC;
+            chromeColor: #9999CC;
             color: #F00E34;
         }
 
         TabBar {
-            baseColor: #9999CC;
+            chromeColor: #9999CC;
             color: #410FF5;
             cornerRadius:8;
         }
