Transferred from the Adobe Open Source Subversion Repository
Revision: 10272
Author:   srahim@adobe.com
Date:     2009-09-15T18:39:42.958257Z

Log Message: 
-----------
Edited code in TextArea example so text displays with proper formatting.
QE notes: None
Doc notes:  None
Bugs: None
Reviewer: None
Tests run: Checkin
Is noteworthy for integration: No

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/spark/asdoc/en_US/spark/components/examples/TextAreaExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275112 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/TextAreaExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/TextAreaExample.mxml
@@ -14,8 +14,13 @@
 	            <s:text>This is a multiline, editable Spark TextArea control. If you need a non-editable multiline control, use the Text control.</s:text>
 	        </s:TextArea>
 	        <s:TextArea width="400" height="100">
-	            <s:content><![CDATA[This is <span color="#FF0000">HTML text</span> in an <span fontWeight="bold">Spark TextArea control</span>. Use the <span textDecoration="underline">content property</span> of the <span color="#008800">Spark TextArea control</span> to include basic HTML markup in your text.]]></s:content>
-	        </s:TextArea>
+	            <s:content>This is <s:span color="#FF0000">HTML text</s:span>
+					in an <s:span fontWeight="bold">Spark TextArea control</s:span>.
+					Use the <s:span textDecoration="underline">content</s:span> property
+					of the <s:span color="#008800">Spark TextArea control</s:span> 
+					to include basic HTML markup in your text, including
+					<s:a href="http://www.adobe.com" target="_blank">links</s:a>.</s:content>
+			</s:TextArea>
 		</s:VGroup>
     </s:Panel>
 
