Transferred from the Adobe Open Source Subversion Repository
Revision: 6036
Author:   tan@adobe.com
Date:     2009-04-08T18:22:43.916999Z

Log Message: 
-----------
Change Halo Panel and Halo Label to Spark components in the VSlider Example.

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/components/examples/VSliderExample.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275142 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/VSliderExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/VSliderExample.mxml
@@ -14,11 +14,9 @@
 	</fx:Script>
 
 	<!-- Panel used as a container for Spark VSlider control examples -->
-	<mx:Panel title="Spark VSlider Control Example" height="75%" width="75%" paddingTop="10"
-	    paddingLeft="10" horizontalCenter="0" verticalCenter="0">
+	<s:Panel title="Spark VSlider Control Example" height="75%" width="75%" >
 
-
-		<s:Group>
+		<s:Group  left="10" top="10">
             <!-- Spark VSlider that calls the function changePosition anytime the value is
 		        changed -->
 		    <s:VSlider id="vSlider" minimum="20" maximum="200" liveDragging="true"
@@ -27,7 +25,7 @@
                 creationComplete="fxImage.x=vSlider.value" />
         </s:Group>
 
-        <mx:Text width="100%" text="Drag the slider to move the image"/>
+        <s:SimpleText width="100%" text="Drag the slider to move the image" left="10" bottom="10"/>
 
-	</mx:Panel>
+	</s:Panel>
 </s:Application>
