Transferred from the Adobe Open Source Subversion Repository
Revision: 19848
Author:   bsahlas@adobe.com
Date:     2011-01-20T22:38:40.039960Z

Log Message: 
-----------
set the styles as properties on the mxml component

Modified Paths:
--------------
/private/flex/sdk/branches/hero_private/frameworks/projects/spark/asdoc/en_US/spark/components/examples/views/BusyIndicatorExampleHomeView.mxml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275160 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/components/examples/views/BusyIndicatorExampleHomeView.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/examples/views/BusyIndicatorExampleHomeView.mxml
@@ -5,7 +5,7 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<s:Panel x="6" y="4" width="434" height="245">
-		<s:BusyIndicator id="bi" x="240" y="11" visible="false" initialize="bi.setStyle('symbolColor', 'red');bi.setStyle('rotationInterval','50')"/>
+		<s:BusyIndicator id="bi" x="240" y="11" visible="false" symbolColor="red" rotationInterval="50"/>
 		<s:Button id="btn" x="3" y="11" label="Fetch Data" click="{bi.visible=!bi.visible};btn.label='Fetching Data ...';btn.enabled=false; "/>
 	</s:Panel>
 </s:View>
