--- a/projects/spark/asdoc/en_US/spark/components/gridClasses/examples/GridItemRendererExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/components/gridClasses/examples/GridItemRendererExample.mxml
@@ -67,7 +67,7 @@ reasonable column width.
             The typicalItem defines column widths and the default row height.  The text
             occpies two lines because we've used '\n' to introduce two newlines.
             
-            Alternatively we could have used the odd XML '&#10;' escape to introduce 
+            Alternatively we could have used the odd XML '&amp;#10;' escape to introduce 
             two newlines (the value of the newline character is decimal 10).
             
             <s:DataItem value="Lorem Ipsum sample text.&amp;#10;Lorem Ipsum sample text.&amp;#10;"/>
