--- a/projects/spark/asdoc/en_US/spark/effects/examples/AnimateColorEffectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/AnimateColorEffectExample.mxml
@@ -19,17 +19,17 @@
     	title="AnimateColor Effect Example"
     	width="75%" height="75%">
 
-        <mx:HBox width="100%" height="100%">
+        <s:HGroup top="5">
             <!-- Our target to affect-->
-            <mx:VBox id="targetBox" width="50%"  horizontalAlign="center">
-                <mx:Label id="targetLabel" text="Nokia 9930" fontFamily="MyMyriad" fontSize="14"/>
-                <mx:Image id="targetImg" source="@Embed(source='assets/Nokia_6630.png')"/>
-            </mx:VBox>
-            <mx:VBox id="detailsBox" width="50%" left="0">
-                <mx:Text id="detailText" width="99%" color="blue"
+            <s:VGroup id="targetBox" width="50%"  horizontalAlign="center">
+                <s:SimpleText id="targetLabel" text="Nokia 9930" fontSize="14"/>
+                <s:BitmapImage id="targetImg" source="@Embed(source='assets/Nokia_6630.png')"/>
+            </s:VGroup>
+            <s:VGroup id="detailsBox" width="50%" left="0">
+                <s:SimpleText id="detailText" width="99%" color="blue"
 		        	text="The:AnimateColor effect changes the color of a target using the following parameters: colorFrom, colorTo. Click 'Animate Color' to watch the effect."/>
-            </mx:VBox>
-        </mx:HBox>
+            </s:VGroup>
+        </s:HGroup>
 
         <s:Rect left="0" right="0" bottom="0" height="30">
             <s:fill>
