--- a/projects/spark/asdoc/en_US/spark/effects/examples/AnimateEffectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/AnimateEffectExample.mxml
@@ -5,11 +5,12 @@
     xmlns:s="library://ns.adobe.com/flex/spark">
 
     <fx:Declarations>
-        <s:Animate id="animateEffect" target="{targetBox}" repeatCount="2" repeatBehavior="reverse" adjustConstraints="true" effectStart="playButton.enabled=false" effectEnd="playButton.enabled=true;">
-            <s:animationProperties>
-                <s:AnimationProperty property="x" valueFrom="0" valueTo="100"/>
-                <s:AnimationProperty property="alpha" valueFrom="1" valueTo="0"/>
-            </s:animationProperties>
+        <s:Animate id="animateEffect"
+        	target="{targetBox}" repeatCount="2" repeatBehavior="reverse" disableConstraints="true" effectStart="playButton.enabled=false" effectEnd="playButton.enabled=true;">
+            <s:motionPaths>
+                <s:SimpleMotionPath property="x" valueFrom="0" valueTo="100"/>
+                <s:SimpleMotionPath property="alpha" valueFrom="1" valueTo="0"/>
+            </s:motionPaths>
         </s:Animate>
     </fx:Declarations>
 
