Transferred from the Adobe Open Source Subversion Repository
Revision: 7885
Author:   mfinitz@adobe.com
Date:     2009-06-16T18:13:46.680707Z

Log Message: 
-----------
Update examples to effects changes in [svn:7836].

Modified Paths:
--------------
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/AnimateTransitionShaderExample.mxml</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/AnimateShaderTransitionExample.mxml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flex4/asdoc/en_US/spark/effects/examples/AnimateEffectExample.mxml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1275216 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/asdoc/en_US/spark/effects/examples/AnimateEffectExample.mxml
+++ b/projects/spark/asdoc/en_US/spark/effects/examples/AnimateEffectExample.mxml
@@ -6,7 +6,7 @@
 
     <fx:Declarations>
         <s:Animate id="animateEffect"
-        	target="{targetBox}" repeatCount="2" repeatBehavior="reverse" disableConstraints="true" effectStart="playButton.enabled=false" effectEnd="playButton.enabled=true;">
+        	target="{targetBox}" repeatCount="2" repeatBehavior="reverse" disableLayout="true" effectStart="playButton.enabled=false" effectEnd="playButton.enabled=true;">
             <s:motionPaths>
                 <s:SimpleMotionPath property="x" valueFrom="0" valueTo="100"/>
                 <s:SimpleMotionPath property="alpha" valueFrom="1" valueTo="0"/>
